include_directories(${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR}
        ${CMAKE_SOURCE_DIR}/src ${CMAKE_SOURCE_DIR}/src/camera)
set(DEVICE_LIBS)
set(DEVICE_DEFS)

if(WITH_CAMERAXIMEA)
    include("${CMAKE_SOURCE_DIR}/cmake/FindXimea.cmake")
    if(XIMEA_FOUND)
        if(APPLE)
            FIND_LIBRARY(XIMEA_LIBRARY NAMES m3api)
            FIND_PATH(XIMEA_PATH xiApi.h)
        else()
            set(XIMEA_LIBRARY xiapi64)
        endif()
        include_directories(${XIMEA_PATH})
        add_library(XimeaCamera STATIC CameraXIMEA.cpp CameraXIMEA.h)
        set(DEVICE_LIBS ${DEVICE_LIBS} XimeaCamera ${IDS_LIBRARY})
        set(DEVICE_DEFS ${DEVICE_DEFS} -DWITH_CAMERAXIMEA)
    else(XIMEA_FOUND)
        message(SEND_ERROR "Could not find Ximea camera support.")
    endif(XIMEA_FOUND)
endif(WITH_CAMERAXIMEA)

if(WITH_CAMERAIDSIMAGING)
    include("${CMAKE_SOURCE_DIR}/cmake/FindIds.cmake")
    if(IDS_FOUND)
        include_directories(${IDS_PATH})
        add_library(IdsCamera STATIC CameraIDSImaging.cpp CameraIDSImaging.h)
        set(DEVICE_LIBS ${DEVICE_LIBS} IdsCamera ${IDS_LIBRARY})
        set(DEVICE_DEFS ${DEVICE_DEFS} -DWITH_CAMERAIDSIMAGING)
    else(IDS_FOUND)
        message(SEND_ERROR "Could not find IDS uEye camera support.")
    endif(IDS_FOUND)
endif(WITH_CAMERAIDSIMAGING)

if(WITH_CAMERAIDC)
    add_library(IdcCamera STATIC CameraIIDC.cpp CameraIIDC.h)
    set(DEVICE_LIBS ${DEVICE_LIBS} IdcCamera)
    set(DEVICE_DEFS ${DEVICE_DEFS} -DWITH_CAMERAIDC)
endif(WITH_CAMERAIDC)

if(WITH_CAMERAPOINTGREY)
    include("${CMAKE_SOURCE_DIR}/cmake/FindPointGrey.cmake")
    if(POINTGREY_FOUND)
        include_directories(${POINTGREY_PATH})
        add_library(PointGreyCamera STATIC CameraPointGrey.cpp CameraPointGrey.h)
        set(DEVICE_LIBS ${DEVICE_LIBS} PointGreyCamera ${POINTGREY_LIBRARY})
        set(DEVICE_DEFS ${DEVICE_DEFS} -DWITH_CAMERAPOINTGREY)
    else(POINTGREY_FOUND)
        message(SEND_ERROR "Could not find PointGrey camera camera support.")
    endif(POINTGREY_FOUND)
endif(WITH_CAMERAPOINTGREY)

if(WITH_CAMERAV4L)
    add_library(V4LCamera STATIC CameraV4L.cpp CameraV4L.h)
    set(DEVICE_LIBS ${DEVICE_LIBS} V4LCamera)
    set(DEVICE_DEFS ${DEVICE_DEFS} -DWITH_CAMERAV4L)
endif(WITH_CAMERAV4L)

if(WITH_CAMERAOPENCV)
    add_library(OpenCvCamera STATIC CameraOpenCV.cpp CameraOpenCV.h)
    set(DEVICE_DEFS ${DEVICE_DEFS} -DWITH_CAMERAOPENCV)
    set(DEVICE_LIBS ${DEVICE_LIBS} OpenCvCamera)
endif(WITH_CAMERAOPENCV)

add_compiler_export_flags()
add_definitions(${DEVICE_DEFS})
add_library(slcamera SHARED Camera.h Camera.cpp)
generate_export_header(slcamera)
target_link_libraries(slcamera
    ${DEVICE_LIBS}
    ${OpenCV_LIBS}
    ${Boost_LIBRARIES}
)
